[fix] fixed width overflow

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,5 +1,6 @@
 /*Begin Tablet, 729-1024px*/
 .foot-info {
+  margin: 0;
   padding: 96px 64px;
   border-top: 1px solid var(--color-black-50);
   border-bottom: 1px solid var(--color-black-25);
